[package]
name = "blitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontconfig = "0.3.0"
ab_glyph = { git = "https://github.com/alexheretic/ab-glyph.git", branch = "always-close-outlines" }
image = "0.24.1"
